--- a/www/css/style.css
+++ b/www/css/style.css
@@ -3,6 +3,27 @@ html, body{
     margin: 0;
     font-size: 20px;
     text-align: center;
+    overflow: hidden;
+}
+
+#menu {
+    font-family: Comic Sans MS;
+    background-size: 100%;
+    padding-top: 10%;
+}
+
+#menu #title {
+    font-size: 4rem;
+    padding-bottom: 5%;
+}
+
+#options {
+    position: relative;
+}
+
+#options span {
+    font-size: 1.5rem;
+    display: block;
 }
 
 #levelInfo {
