--- a/platforms/android/assets/www/css/style.css
+++ b/platforms/android/assets/www/css/style.css
@@ -1,18 +1,42 @@
 html, body{
-    /* background-color: deepskyblue !important; */
     margin: 0;
     font-size: 20px;
     text-align: center;
+    overflow: hidden;
 }
 
 #menu {
-    background-image: url("../images/menu.png");
+    position: absolute;
+    top: 5%;
     width: 100%;
-    height: 100%;
+    height: 95%;
+    font-family: "Comic Sans MS";
+    background-size: 100%; 
 }
 
-#menu span {
+#menu #title {
+    height: 20%;
+    padding-bottom: 10%;
+    font-size: 4rem;
+}
+
+#options {
+    position: relative;
+    height: 70%;
+}
+
+#options span {
+    position: relative;
     display: block;
+    height: 20%;
+    padding-bottom: 5%;
+    font-size: 1.5rem;
+}
+
+#mazes {
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
 
 #levelInfo {
@@ -26,9 +50,13 @@ html, body{
 #timerInfo {
     position: absolute;
     width: 100%;
+    height: 100%;
     opacity: 0.4;
+    transition-timing-function: linear;
 }
 
 #card {
+    width: 100%;
+    height: 100%;
     -webkit-transform: translate3d(0px,0px,0px);
 }
