--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,5 +1,4 @@
 html, body{
-    /* background-color: deepskyblue !important; */
     margin: 0;
     font-size: 20px;
     text-align: center;
@@ -7,23 +6,39 @@ html, body{
 }
 
 #menu {
-    font-family: Comic Sans MS;
-    background-size: 100%;
-    padding-top: 10%;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    font-family: "Comic Sans MS";
+    background-size: 100%; 
+    background-image: url("../images/nightsky.gif-c200");
+    color: white;
 }
 
 #menu #title {
+    padding-top: 5%;
+    height: 20%;
+    padding-bottom: 10%;
     font-size: 4rem;
-    padding-bottom: 5%;
 }
 
 #options {
     position: relative;
+    height: 70%;
 }
 
 #options span {
-    font-size: 1.5rem;
+    position: relative;
     display: block;
+    height: 20%;
+    padding-bottom: 5%;
+    font-size: 1.5rem;
+}
+
+#mazes {
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
 
 #levelInfo {
@@ -37,9 +52,13 @@ html, body{
 #timerInfo {
     position: absolute;
     width: 100%;
+    height: 100%;
     opacity: 0.4;
+    transition-timing-function: linear;
 }
 
 #card {
+    width: 100%;
+    height: 100%;
     -webkit-transform: translate3d(0px,0px,0px);
 }
