--- a/platforms/android/assets/www/css/style.css
+++ b/platforms/android/assets/www/css/style.css
@@ -5,27 +5,58 @@ html, body{
     overflow: hidden;
 }
 
-#menu {
+#transition {
     position: absolute;
-    top: 5%;
     width: 100%;
-    height: 95%;
+    height: 100%;
     font-family: "Comic Sans MS";
     background-size: 100%; 
+    color: #000;
+}
+
+#transition #title {
+    padding-top: 10%;
+    height: 20%;
+    padding-bottom: 10%;
+    font-size: 3rem;
+}
+
+#transition #options {
+    position: relative;
+    height: 60%;
+}
+
+#transition #options span {
+    position: relative;
+    display: block;
+    height: 15%;
+    padding-bottom: 10%;
+    font-size: 1.5rem;
+}
+
+#menu {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    font-family: "Comic Sans MS";
+    background-size: 100%; 
+    background-image: url("../images/nightsky.gif-c200");
+    color: white;
 }
 
 #menu #title {
+    padding-top: 5%;
     height: 20%;
     padding-bottom: 10%;
     font-size: 4rem;
 }
 
-#options {
+#menu #options {
     position: relative;
     height: 70%;
 }
 
-#options span {
+#menu #options span {
     position: relative;
     display: block;
     height: 20%;
