--- a/www/css/style.css
+++ b/www/css/style.css
@@ -5,6 +5,33 @@ html, body{
     overflow: hidden;
 }
 
+#transition {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    font-family: "Comic Sans MS";
+    background-size: 100%; 
+    color: #000;
+}
+
+#transition #title {
+    padding-top: 10%;
+    height: 20%;
+    padding-bottom: 10%;
+    font-size: 3rem;
+}
+
+#transition #options {
+    height: 60%;
+}
+
+#transition #options span {
+    display: block;
+    height: 15%;
+    padding-bottom: 10%;
+    font-size: 1.5rem;
+}
+
 #menu {
     position: absolute;
     width: 100%;
@@ -22,12 +49,12 @@ html, body{
     font-size: 4rem;
 }
 
-#options {
+#menu #options {
     position: relative;
     height: 70%;
 }
 
-#options span {
+#menu #options span {
     position: relative;
     display: block;
     height: 20%;
