--- a/platforms/android/assets/www/css/style.css
+++ b/platforms/android/assets/www/css/style.css
@@ -1,67 +1,74 @@
+@font-face {
+    font-family: square;
+    src: url("../font/SquareOne.ttf");
+}
+
 html, body{
+    font-size: 11px;
     margin: 0;
-    font-size: 20px;
     text-align: center;
+    font-family: square;
     overflow: hidden;
 }
 
+@media (min-width: 320px) { html { font-size: 16px; } }
+@media (min-width: 360px) { html { font-size: 20px; } }
+@media (min-width: 420px) { html { font-size: 24px; } }
+@media (min-width: 520px) { html { font-size: 26px; } }
+@media (min-width: 600px) { html { font-size: 28px; } }
+@media (min-width: 720px) { html { font-size: 30px; } }
+
 #transition {
-    position: absolute;
+    position: relative;
     width: 100%;
     height: 100%;
-    font-family: "Comic Sans MS";
     background-size: 100%; 
     color: #000;
 }
 
 #transition #title {
-    padding-top: 10%;
-    height: 20%;
-    padding-bottom: 10%;
-    font-size: 3rem;
+    padding-top: 15%;
+    padding-bottom: 15%;
+    font-size: 2.5rem;
 }
 
 #transition #options {
-    position: relative;
-    height: 60%;
+    height: 50%;
 }
 
-#transition #options span {
-    position: relative;
+#transition #options div {
     display: block;
-    height: 15%;
-    padding-bottom: 10%;
-    font-size: 1.5rem;
+    min-height: 15%;
+    padding-bottom: 3%;
+    font-size: 1rem;
 }
 
 #menu {
     position: absolute;
     width: 100%;
     height: 100%;
-    font-family: "Comic Sans MS";
     background-size: 100%; 
     background-image: url("../images/nightsky.gif-c200");
     color: white;
 }
 
 #menu #title {
-    padding-top: 5%;
-    height: 20%;
-    padding-bottom: 10%;
+    padding-top: 15%;
+    padding-bottom: 15%;
     font-size: 4rem;
 }
 
 #menu #options {
     position: relative;
-    height: 70%;
+    height: 40%;
 }
 
-#menu #options span {
+#menu #options div {
     position: relative;
     display: block;
-    height: 20%;
-    padding-bottom: 5%;
-    font-size: 1.5rem;
+    min-height: 20%;
+    margin-bottom: 5%;
+    font-size: 1rem;
 }
 
 #mazes {
@@ -73,9 +80,9 @@ html, body{
 #levelInfo {
     position: absolute;
     display: none;
-    font-size: 11rem;
+    font-size: 7rem;
     width: 100%;
-    opacity: 0.3;
+    opacity: 0.1;
 }
 
 #timerInfo {
