--- a/platforms/android/assets/www/css/style.css
+++ b/platforms/android/assets/www/css/style.css
@@ -18,67 +18,7 @@ html, body{
 @media (min-width: 600px) { html { font-size: 28px; } }
 @media (min-width: 720px) { html { font-size: 30px; } }
 
-#reset {
-    position: relative;
-    width: 70%;
-    color: #fff;
-    background-color: rgba(0, 0, 0, 0.9);
-    border: 2px solid white;
-    margin:0 auto;
-    top: 50%;
-    transform: translateY(-50%);
-}
-
-#reset #title {
-    padding-top: 15%;
-    padding-bottom: 15%;
-    font-size: 1.5rem;
-}
-
-#reset #options {
-    position: relative;
-}
-
-#reset #options div {
-    position: relative;
-    display: block;
-    min-height: 15%;
-    padding-bottom: 10%;
-    font-size: 0.7rem;
-}
-
-#reset #options #yes {
-    color: forestgreen;
-}
-
-#reset #options #no {
-    color: crimson;
-}
-
-#transition {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    background-size: 100%; 
-    color: #000;
-}
-
-#transition #title {
-    padding-top: 15%;
-    padding-bottom: 15%;
-    font-size: 2.5rem;
-}
-
-#transition #options {
-    height: 50%;
-}
-
-#transition #options div {
-    display: block;
-    min-height: 15%;
-    padding-bottom: 3%;
-    font-size: 1rem;
-}
+/*** MENU STYLES ***/
 
 #menu {
     position: absolute;
@@ -108,11 +48,87 @@ html, body{
     font-size: 1rem;
 }
 
-#mazes {
+/*** TRANSITION STYLES ***/
+
+#transition {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background-size: 100%; 
+    color: #000;
+}
+
+#transition #title {
+    padding-top: 15%;
+    padding-bottom: 15%;
+    font-size: 2.5rem;
+}
+
+#transition #options {
+    height: 50%;
+}
+
+#transition #options div {
+    display: block;
+    min-height: 15%;
+    margin-bottom: 3%;
+    font-size: 1rem;
+}
+
+/*** RESET CONFIRMATION STYLES ***/
+
+#reset {
+    position: relative;
+    width: 70%;
+    color: #fff;
+    background-color: rgba(0, 0, 0, 0.9);
+    border: 2px solid white;
+    margin:0 auto;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+#reset #title {
+    padding-top: 15%;
+    padding-bottom: 15%;
+    font-size: 1.5rem;
+}
+
+#reset #options {
+    position: relative;
+}
+
+#reset #options div {
+    position: relative;
+    display: block;
+    min-height: 15%;
+    margin-bottom: 10%;
+    font-size: 0.7rem;
+}
+
+#reset #options #yes {
+    color: forestgreen;
+}
+
+#reset #options #no {
+    color: crimson;
+}
+
+/*** MAZE AND CARD STYLES ***/
+
+#game {
     position: absolute;
     width: 100%;
     height: 100%;
 }
+
+#card {
+    width: 100%;
+    height: 100%;
+    -webkit-transform: translate3d(0px,0px,0px);
+}
+
+/*** LEVEL INFORMATION STYLE ***/
 
 #levelInfo {
     position: absolute;
@@ -122,16 +138,12 @@ html, body{
     opacity: 0.1;
 }
 
+/*** TIMER STYLE ***/
+
 #timerInfo {
     position: absolute;
     width: 100%;
     height: 100%;
     opacity: 0.4;
     transition-timing-function: linear;
-}
-
-#card {
-    width: 100%;
-    height: 100%;
-    -webkit-transform: translate3d(0px,0px,0px);
 }
