--- a/www/css/style.css
+++ b/www/css/style.css
@@ -21,7 +21,7 @@ html, body{
 /*** MENU STYLES ***/
 
 #menu {
-    position: relative;
+    position: absolute;
     width: 100%;
     height: 100%;
     background-size: 100%; 
