--- a/platforms/android/assets/www/css/style.css
+++ b/platforms/android/assets/www/css/style.css
@@ -4,15 +4,15 @@
 }
 
 html, body{
-    font-size: 11px;
+    font-size: 10px;
     margin: 0;
     text-align: center;
     font-family: square;
     overflow: hidden;
 }
 
-@media (min-width: 320px) { html { font-size: 16px; } }
-@media (min-width: 360px) { html { font-size: 18px; } }
+@media (min-width: 320px) { html { font-size: 18px; } }
+@media (min-width: 360px) { html { font-size: 20px; } }
 @media (min-width: 420px) { html { font-size: 22px; } }
 @media (min-width: 520px) { html { font-size: 24px; } }
 @media (min-width: 600px) { html { font-size: 26px; } }
@@ -31,6 +31,7 @@ html, body{
 #menu #title {
     padding-top: 15%;
     padding-bottom: 15%;
+    max-height: 30%;
     font-size: 4rem;
 }
 
@@ -67,20 +68,77 @@ html, body{
 }
 
 #transition #title {
-    padding-top: 15%;
-    padding-bottom: 15%;
-    font-size: 2.5rem;
+    position: absolute;
+    width: 100%;
+    top: 10%;
+    max-height: 15%; 
+    font-size: 2rem;
 }
 
 #transition #options {
-    height: 50%;
+    position: absolute;
+    top: 30%;
+    height: 70%;
+    width: 100%;
 }
 
 #transition #options div {
-    display: block;
-    min-height: 15%;
-    margin-bottom: 3%;
+    display: inline-block;
+    width: 100%;
+    height: 10%;
     font-size: 1rem;
+}
+
+#transition #options #stars {
+    height: 15%;
+    margin-top: 2%;
+    margin-bottom: 5%;
+}
+
+#transition #options #trophyWrapper {
+    height: 35%;
+    margin-top: 3%;
+    margin-bottom: 6%;
+}
+
+#transition #options #progress {
+    width: 80%;
+    height: 15%;
+    margin: 0 auto;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    background: linear-gradient(to right, rgba(255, 90, 0, 1), rgba(255, 255, 0, 1), rgba(0, 255, 0, 1), rgba(0, 0, 255, 1), rgba(255, 0, 255, 1), rgba(255, 255, 255, 1));
+    border: 1px solid #000; 
+    border-radius: 5px 5px 5px 5px;
+    -webkit-border-radius: 5px 5px 5px 5px;
+}
+
+#transition #options #progress #marker {
+    display: block;
+    width: 2%;
+    height: 100%;
+    border-left: 2px solid #000;
+}
+
+#transition #options #specialMsg {
+    font-size: 1.2rem;
+    color: yellow;
+}
+
+#transition #options #specialMsgWrapper {
+    height: 15%;
+    margin-top: 5%;
+    margin-bottom: 2%;
+}
+
+#transition #options #playWrapper {
+    height: 8%;
+    margin-top: 5%;
+}
+
+#transition #options #backWrapper {
+    height: 8%;
+    margin-top: 6%;
 }
 
 #transition #options #play,  #transition #options #back{
