--- a/www/css/style.css
+++ b/www/css/style.css
@@ -151,6 +151,7 @@ html, body{
     margin:0 auto;
     top: 50%;
     transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
 }
 
 #reset #title {
@@ -186,10 +187,8 @@ html, body{
     width: 100%;
     height: 100%;
     -webkit-transform: translate3d(0px,0px,0px);
-    -webkit-transition: background-color 1s ease-out;
-    -moz-transition: background-color 1s ease-out;
-    -o-transition: background-color 1s ease-out;
-    transition: background-color 1s ease-out;
+    -webkit-transition: background-color 2s ease-out;
+    transition: background-color 2s ease-out;
 }
 
 #card {
@@ -248,6 +247,7 @@ html, body{
     position: absolute;
     width: 100%;
     height: 100%;
+    background-color: #ffb84d;
     background-image: url("../images/instructions1.png");
     background-size: cover; 
 }
@@ -272,6 +272,9 @@ html, body{
     background-repeat: no-repeat;
     width: 20%;
     height: 15%;
+    transition-timing-function: linear;
+    -webkit-transition-timing-function: linear;
+    -webkit-transform: translate3d(0px,0px,0px);
 }
 
 /*** LEVEL INFORMATION STYLE ***/
@@ -288,9 +291,10 @@ html, body{
 
 #timerInfo {
     position: absolute;
-    transform: translate3d(0px,0px,0px);
+    -webkit-transform: translate3d(0px,0px,0px);
     width: 100%;
     height: 100%;
     opacity: 0.2;
     transition-timing-function: linear;
+    -webkit-transition-timing-function: linear;
 }
