all levels mapped

--- a/platforms/android/assets/www/css/style.css
+++ b/platforms/android/assets/www/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: square;
-    src: url("../font/SquareThree.ttf");
+    src: url("../font/SquareOne.ttf");
 }
 
 html, body{
