--- a/platforms/android/assets/www/css/style.css
+++ b/platforms/android/assets/www/css/style.css
@@ -123,7 +123,7 @@ html, body{
 
 #transition #options #specialMsg {
     font-size: 1.2rem;
-    color: yellow;
+    color: black;
 }
 
 #transition #options #specialMsgWrapper {
