--- a/platforms/android/res/xml/config.xml
+++ b/platforms/android/res/xml/config.xml
@@ -19,13 +19,16 @@
     <feature name="Media">
         <param name="android-package" value="org.apache.cordova.media.AudioHandler" />
     </feature>
-    <splash platform="android" qualifier="ldpi" src="splash.png" />
-    <splash platform="android" qualifier="mdpi" src="splash.png" />
-    <splash platform="android" qualifier="hdpi" src="splash.png" />
-    <splash platform="android" qualifier="xhdpi" src="splash.png" />
-    <splash platform="android" qualifier="fr-xhdpi" src="splash.png" />
-    <splash platform="android" qualifier="port-xxhdpi" src="splash.png" />
-    <splash platform="android" qualifier="land-xxhdpi" src="splash.png" />
+    <access origin="*" />
+    <icon density="ldpi" src="iconAndroid.png" />
+    <icon density="mdpi" src="iconAndroid.png" />
+    <icon density="hdpi" src="iconAndroid.png" />
+    <icon density="xhdpi" src="iconAndroid.png" />
+    <splash density="ldpi" platform="android" src="screen.png" />
+    <splash density="mdpi" platform="android" src="screen.png" />
+    <splash density="hdpi" platform="android" src="screen.png" />
+    <splash density="xhdpi" platform="android" src="screen.png" />
+    <splash density="xxhdpi" platform="android" src="screen.png" />
     <allow-intent href="market:*" />
     <preference name="android-minSdkVersion" value="15" />
     <preference name="android-targetSdkVersion" value="19" />
@@ -37,9 +40,10 @@
         Ricardo Godoy
     </author>
     <content src="index.html" />
-    <icon src="icon.png" />
     <preference name="Orientation" value="portrait" />
-    <preference name="SplashScreen" value="splash" />
+    <preference name="SplashScreen" value="screen" />
     <preference name="AutoHideSplashScreen" value="false" />
+    <preference name="ShowSplashScreenSpinner" value="false" />
     <preference name="android-build-tool" value="gradle" />
+    <preference name="StatusBarOverlaysWebView" value="false" />
 </widget>
