--- a/platforms/android/assets/www/css/style.css
+++ b/platforms/android/assets/www/css/style.css
@@ -29,7 +29,7 @@ html, body{
     width: 100%;
     height: 100%;
     background-size: cover; 
-    background-image: url("../images/bg.gif"); 
+    background-image: url("../images/bg.jpg"); 
     
 }
 
@@ -50,7 +50,16 @@ html, body{
     max-height: 30%;
     font-size: 4rem;
     font-weight: bold;
-    text-shadow: 5px 5px 5px #000;
+}
+
+.menuOriginal {
+    color: #000;
+    text-shadow: 2px 2px 2px #76DB6D;
+}
+
+.menuWinner {
+    color: #E0BB00;
+    text-shadow: 2px 2px 2px #000;
 }
 
 #menu #options {
