--- a/platforms/android/assets/www/css/style.css
+++ b/platforms/android/assets/www/css/style.css
@@ -29,7 +29,7 @@ html, body{
     width: 100%;
     height: 100%;
     background-size: cover; 
-    background-image: url("../images/bg.jpg"); 
+    background-image: url("../images/bg.png"); 
     
 }
 
@@ -245,7 +245,7 @@ html, body{
     position: absolute;
     width: 100%;
     height: 100%;
-    background-image: url("../images/bg.jpg");
+    background-image: url("../images/bg.png");
     color: #000;
     font-size: 0.7rem;
 }
