--- a/platforms/android/res/xml/config.xml
+++ b/platforms/android/res/xml/config.xml
@@ -17,10 +17,10 @@
         <param name="android-package" value="org.apache.cordova.media.AudioHandler" />
     </feature>
     <access origin="*" />
-    <icon density="ldpi" src="iconAndroid.png" />
-    <icon density="mdpi" src="iconAndroid.png" />
-    <icon density="hdpi" src="iconAndroid.png" />
-    <icon density="xhdpi" src="iconAndroid.png" />
+    <icon density="ldpi" src="icons/iconAndroid.png" />
+    <icon density="mdpi" src="icons/iconAndroid.png" />
+    <icon density="hdpi" src="icons/iconAndroid.png" />
+    <icon density="xhdpi" src="icons/iconAndroid.png" />
     <splash density="ldpi" platform="android" src="screen.png" />
     <splash density="mdpi" platform="android" src="screen.png" />
     <splash density="hdpi" platform="android" src="screen.png" />
